Correccion de errores, aun no envia correos

--- a/Página Web/Contenido de Construcción/Codigo_Fuente/index.html
+++ b/Página Web/Contenido de Construcción/Codigo_Fuente/index.html
@@ -87,6 +87,9 @@
         <label>Nombre
           <input id="regName" type="text" placeholder="Tu nombre" />
         </label>
+        <label>Apellido
+          <input id="regLastName" type="text" placeholder="Tu apellido" />
+        </label>
         <label>Email
           <input id="regEmail" type="email" placeholder="correo@ejemplo.com" />
         </label>
@@ -95,7 +98,7 @@
         </label>
         <button id="doRegister" class="btn">Crear cuenta</button>
       </div>
-      <p class="auth-note">Los datos se guardan localmente.</p>
+      <p class="auth-note"></p>
     </div>
   </div>
 
