Envio de correos agregado, (Sin API Key, remplazar si se necesita)

--- a/Página Web/Contenido de Construcción/Codigo_Fuente/index.html
+++ b/Página Web/Contenido de Construcción/Codigo_Fuente/index.html
@@ -51,7 +51,7 @@
     <!-- Contact -->
     <section id="contacto" class="contact container">
       <h3>Contacto</h3>
-      <p>Tel: +52 55 12 34 56 78 · Email: contactoVinyl@gmail.com</p>
+      <p>Tel: +52 55 12 34 56 78 · Email: contacto.vinylshop@gmail.com</p>
       <p>Dirección: Ciudad, México</p>
     </section>
   </main>
